--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,28 @@
 alembic==1.14.0
+astroid==3.3.5
+bidict==0.23.1
 blinker==1.8.2
 click==8.1.7
+dill==0.3.9
 Flask==3.0.3
+Flask-SocketIO==5.4.1
 Flask-SQLAlchemy==3.1.1
+h11==0.14.0
+isort==5.13.2
 itsdangerous==2.2.0
 Jinja2==3.1.4
 Mako==1.3.6
 MarkupSafe==3.0.2
+mccabe==0.7.0
+platformdirs==4.3.6
 psycopg2==2.9.10
+pylint==3.3.1
 python-dotenv==1.0.1
+python-engineio==4.10.1
+python-socketio==5.11.4
+simple-websocket==1.1.0
 SQLAlchemy==2.0.36
+tomlkit==0.13.2
 typing_extensions==4.12.2
 Werkzeug==3.1.1
+wsproto==1.2.0
