--- a/.pylintrc
+++ b/.pylintrc
@@ -443,6 +443,10 @@ disable=raw-checker-failed,
         missing-class-docstring,
         missing-function-docstring,
         missing-module-docstring,
+        too-few-public-methods,
+        broad-exception-caught,
+        no-name-in-module,
+        no-else-return
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
