--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -7,8 +7,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10"]
-    steps:
+        python-version: ["3.13"]
+    steps
       - uses: actions/checkout@v4
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v3
