--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,18 +2,17 @@ version: "3.6"
 services:
   db:
     image: postgres:15
+    container_name: tkt2019_ryhma_chat-db
     environment:
       POSTGRES_PASSWORD: password
+      PGPORT: 6543
     volumes:
       - pg-data:/var/lib/postgresql/data/
       - ./provision_db.sql:/docker-entrypoint-initdb.d/1_provision_db.sql
     restart: unless-stopped
-    command: >
-      sh -c "apt update && apt install -y postgresql-15-rum &&
-             echo 'trusted = true' >> /usr/share/postgresql/15/extension/rum.control &&
-             /usr/local/bin/docker-entrypoint.sh -c log_statement=all"
+    command: ["postgres", "-p", "6543", "-c", "log_statement=all"]
     ports:
-      - "6543:5432"
+      - "6543:6543"
     healthcheck:
       test: ["CMD", "pg_isready", "-U", "postgres"]
       interval: 10s
