--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ Mako==1.3.6
 MarkupSafe==3.0.2
 mccabe==0.7.0
 platformdirs==4.3.6
-psycopg2==2.9.10
+psycopg2-binary==2.9.10
 pylint==3.3.1
 python-dotenv==1.0.1
 python-engineio==4.10.1
