--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,13 @@ bidict==0.23.1
 blinker==1.8.2
 click==8.1.7
 dill==0.3.9
+dnspython==2.7.0
+eventlet==0.38.2
 Flask==3.0.3
 Flask-SocketIO==5.4.1
 Flask-SQLAlchemy==3.1.1
+greenlet==3.1.1
+gunicorn==23.0.0
 h11==0.14.0
 isort==5.13.2
 itsdangerous==2.2.0
@@ -14,6 +18,7 @@ Jinja2==3.1.4
 Mako==1.3.6
 MarkupSafe==3.0.2
 mccabe==0.7.0
+packaging==24.2
 platformdirs==4.3.6
 psycopg2-binary==2.9.10
 pylint==3.3.1
